src/styles/about.scss
@use "base";

.about-page-wrapper {
  background-color: base.$gray-bg;
}

.about-page-container {
  position: relative;
  padding: 25px;
  overflow-y: scroll;
  scroll-behavior: smooth;
  display: flex;
  flex-direction: column;
  min-height: 100dvh;
  height: 100dvh;
  gap: 55px;
}

.about-image {
  filter: grayscale(100);
  border-radius: 8px;
  width: 60%;
}

.about-image-caption {
  color: gray;
  margin-top: 7px;
  font-size: 11px;
}

.about-blurb {
  width: 60%;
}

.back-button {
  display: none;
}

@media screen and (max-width: 864px) {
  #sidebar {
    display: none;
  }

  .about-image-caption {
    font-size: 12px;
  }

  .about-image,
  .about-blurb {
    width: 100%;
  }

  .about-page-container {
    height: auto;
  }

  .back-button {
    display: block;
    position: fixed;
    right: 15px;
    top: 15px;
  }

  .back-button p > a {
    color: base.$gray-content;
    text-decoration: none;

    &:visited {
      color: base.$gray-content;
    }

    &:hover {
      text-decoration: none;
    }
  }
}

@media screen and (max-width: 640px) {
  .about-page-container {
    padding: 15px;
    height: auto;
  }
}

